<resources>

    <string name="app_name">Ultimate Budget Book</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="title_activity_main">Ultimate Budget Book</string>

    <!-- Anmelde Activity -->
    <string name="e_loginname">E-Mail</string>
    <string name="e_loginpassword">Passwort</string>
    <string name="b_login">Anmelden</string>
    <string name="b_loginregister">Registrieren</string>
    <string name="title_activity_register">Registrieren</string>

    <!-- Register Activity -->
    <string name="t_ueberschrift">Registrierung</string>
    <string name="t_anzeigename">Name</string>
    <string name="t_email">E-Mail</string>
    <string name="t_password1">Passwort</string>
    <string name="t_password2">Wiederholen</string>
    <string name="b_register">Registrieren</string>
    <string name="title_activity_budget_book_overview">Meine Haushaltsbücher</string>
    <string name="menu_category">Kategorien</string>
    <string name="menu_new">Erstellen</string>
    <string name="menu_delete">Löschen</string>

    <!-- BuudgetBook Übersicht und Detail Activity -->
    <string name="b_newBudgetBook">Neues Haushaltsbuch</string>
    <string name="title_dayView">Tagesansicht</string>
    <string name="title_weekView">Wochenansicht</string>
    <string name="title_monthView">Monatsansicht</string>
    <string name="title_yearView">Jahresansicht</string>
    <string name="title_activity_budget_book_create_new">Neues Haushaltsbuch</string>
    <string name="menu_newBooking">Neuer Eintrag</string>
    <string name="b_delete">Löschen</string>
    <string name="title_activity_budget_book_detail">Haushaltsbuch Detailansicht</string>

    <!-- Booking Views -->
    <string name="text_name">Bezeichnung</string>
    <string name="text_betrag">Betrag</string>
    <string name="text_datum">Buchungsdatum</string>
    <string name="b_datePicker">Datum auswählen</string>
    <string name="title_activity_create_booking">Neue Buchung anlegen</string>
    <string name="title_activity_edit_booking">Buchung bearbeiten</string>
    <string name="label_category_select">Kategorie</string>
    <string name="label_type_select">Buchungstyp</string>
    <string name="b_save_booking">Buchung speichern</string>
    <string name="title_detailBooking">Buchungs Details</string>
    <string name="title_createBooking">Buchung erstellen</string>
    <string name="noBookingsPresent">Keine Einträge vorhanden</string>
    <string name="b_update_booking">Buchung Aktuallisieren</string>
    <string name="title_allBookingsView">Gesamter Zeitraum</string>
    <string name="title_activity_booking_details">Buchungsdetails</string>
    <string name="create_user">Erstellt von</string>
    <string name="change_user">geändert durch</string>
    <string name="create_time">Erstellt am</string>
    <string name="changed_time">geändert am</string>
    <string name="b_change_mode_booking">Buchung bearbeiten</string>
    

    <!-- category overview -->
    <string name="b_category_create">Kategorie anlegen</string>
    <string name="b_category_change">Kategorie ändern</string>
    <string name="title_activity_categorie_create">Kategorien anlegen</string>
    <string name="title_activity_categorie_overview">Kategorien Übersicht</string>

    <!-- categorie create -->
    <string name="b_categorie_create">Anlegen</string>

    <!-- categorie change -->
    <string name="title_activity_category_change">Kategorie ändern</string>
    <string name="add_budget_book_user">Weiteren Benutzer Hinzufügen</string>
    <string name="save_new_budget_book">Anlegen</string>
    <string name="owner_budget_book">Benutzer</string>
    <string name="new_name_for_budget_book">Name</string>
    <string name="stayLoggedIn">Angemeldet bleiben</string>
    <string name="b_add">Buchung hinzufügen</string>
    <string name="createCategoryTitle">Neue Kategorie</string>
    <string name="b_overchange_delete">Kategorie löschen</string>
    <string name="tv_overchange">Kategorie ändern</string>
    <string name="e_overchange"></string>
    <string name="b_over_change">Kategorie ändern</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
   

</resources>