<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+BookingCreateLayout/contentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+BookingCreateLayout/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/title_bottom_border"
        android:layout_marginTop="@dimen/default_top_border"
        android:text="@string/title_createBooking"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+BookingCreateLayout/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_border"
        android:layout_marginRight="@dimen/default_border" >

        <TableRow
            android:id="@+BookingCreateLayout/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+BookingCreate/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/default_border"
                android:text="@string/text_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+BookingCreate/name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+BookingCreateLayout/ammountContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+BookingCreate/betrag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/default_border"
                android:text="@string/text_betrag"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+BookingCreate/betrag_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number|text" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+BookingCreateLayout/dateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+BookingCreate/Datum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/default_border"
                android:text="@string/text_datum"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+BookingCreate/datePicker_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b_datePicker" />
        </TableRow>

        <TableRow
            android:id="@+BookingCreateLayout/typeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+BookingCreate/label_booking_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/default_border"
                android:text="@string/label_type_select"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+BookingCreate/booking_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+BookingCreateLayout/categoryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+BookingCreate/label_booking_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/default_border"
                android:text="@string/label_category_select"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+BookingCreate/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+BookingCreate/save_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_border"
        android:layout_marginRight="@dimen/default_border"
        android:layout_marginTop="@dimen/default_top_border"
        android:text="@string/b_save_booking" />

</LinearLayout>