<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+BookingDetailLayout/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+BookingDetailLayout/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/title_bottom_border"
            android:layout_marginTop="@dimen/default_top_border"
            android:text="@string/title_detailBooking"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:id="@+BookingDetailLayout/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_border"
            android:layout_marginRight="@dimen/default_border" >

            <TableRow
                android:id="@+BookingDetailLayout/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/text_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+BookingDetail/name_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/ammountContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/betrag_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/text_betrag"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+BookingDetail/betrag_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number|text" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/createUserContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/create_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/create_user"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+BookingDetail/create_user_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text"
                    android:editable="false" >

                </EditText>
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/changeUserContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/change_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/change_user"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+BookingDetail/change_user_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text" >

                </EditText>
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/createTimetContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/create_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/create_time"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+BookingDetail/create_time_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text" >

                </EditText>
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/changedTimeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/changed_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/changed_time"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+BookingDetail/changed_time_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text" >

                </EditText>
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/dateContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/Datum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/text_datum"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+BookingDetail/datePicker_Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_datePicker" />
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/typeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/label_booking_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/label_type_select"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Spinner
                    android:id="@+BookingDetail/booking_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+BookingDetailLayout/categoryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+BookingDetail/label_booking_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/default_border"
                    android:text="@string/label_category_select"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Spinner
                    android:id="@+BookingDetail/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
        
        <Button
            android:id="@+BookingDetail/update_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_border"
            android:layout_marginRight="@dimen/default_border"
            android:layout_marginTop="@dimen/default_top_border"
            android:text="@string/b_update_booking" />
    </LinearLayout>

</ScrollView>